dark mode fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -79,7 +79,7 @@
 	--gradient-color: linear-gradient(20deg, var(--dark), var(--lighter));
 	--transparent: rgba(0, 0, 0, 0);
 	--postcard-color: rgba(69, 69, 77, 0.2); //var(--darker), 20% opacity
-	--postcard-color: rgba(69, 69, 77, 0.85); 
+	--modal-color: rgba(22, 22, 26, 0.7); 
 	--absolute: var(--absolutedark);
 	--primary-button-shadow-color: rgba(104, 132, 217, 0.3);
 	--secondary-button-shadow-color: rgba(115, 115, 128, 0.4);
